// Written by yijian on 2024/01/21
syntax = "proto3";
package mooon_login;

// 当 protoc-gen-go 版本大于 1.4.0 时需加上 go_package，否则编译报错“unable to determine Go import path for”
option go_package = "./mooon_login";

// Cookie
message Cookie {
  string name = 1;
  string value = 2;
  string path = 3;
}

// 登录请求消息
message LoginReq {
  string body = 1; // 登录请求体，建议为 json 格式的数据
}

// 登录响应消息
message LoginResp {
  repeated Cookie http_cookies = 1; // 写入 cookie 的数据，这些信息将传给鉴权服务
  map<string, string> http_headers = 2; // 写入 http 头的数据
}

// 登录（login）服务定义
service MooonLogin {
  rpc login(LoginReq) returns(LoginResp);
}
